修复RRV 8.0+导致的崩溃